# TCG_Project5-AlphaZero

./: .gitignore  CMakeLists.txt  Makefile  _action.cpp  _agent.cpp  _board.cpp  _episode.cpp  agent.h  alhpazero.py  board.h  episode.h  network.py  nogo.cpp  self_play.cpp  self_play_dataset.py  statistic.h  test_board  train.py
model/: iteration_100.pt
sgf/iteration_100/: self-play_1.sgf  self-play_10.sgf  self-play_2.sgf  self-play_3.sgf  self-play_4.sgf  self-play_5.sgf  self-play_6.sgf  self-play_7.sgf  self-play_8.sgf  self-play_9.sgf
