cmake_minimum_required(VERSION 2.8.12)
project(code)
add_definitions(-std=c++14)
add_subdirectory(pybind11)
find_package(Torch REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
set(CMAKE_CXX_FLAGS "-g")   
add_executable(nogo-alphazero nogo.cpp)
target_link_libraries(nogo-alphazero "${TORCH_LIBRARIES}")
# add_executable(self_play self_play.cpp)
# target_link_libraries(self_play "${TORCH_LIBRARIES}")

# set_property(TARGET nogo PROPERTY CXX_STANDARD 14)
# pybind11_add_module(_board _board.cpp)
# pybind11_add_module(_agent _agent.cpp)
# pybind11_add_module(_action _action.cpp)
# pybind11_add_module(_episode _episode.cpp)
# target_link_libraries(_agent PUBLIC "${TORCH_LIBRARIES}")
# target_link_libraries(_action PUBLIC "${TORCH_LIBRARIES}")
# target_link_libraries(_episode PUBLIC "${TORCH_LIBRARIES}")
# target_link_libraries(_agent "${TORCH_LIBRARIES}")

# set_target_properties(module PROPERTIES LINKER_LANGUAGE CXX)
